[package]
name = "jrsonnet-importers"
version = "0.3.1"
edition = "2021"
description = "More importers for jrsonnet"
license = "MIT"
repository = "https://github.com/Jezza/jrsonnet-importers"

[features]
default            = []
rust-embed         = ["dep:rust-embed"]
input              = ["dep:anyhow", "dep:serde", "dep:serde_json"]
exp-preserve-order = ["input", "jrsonnet-evaluator/exp-preserve-order", "jrsonnet-stdlib/exp-preserve-order", ]
exp-destruct       = ["input", "jrsonnet-evaluator/exp-destruct", ]

[dependencies]
jrsonnet-gcmodule  = "=0.3.7"
jrsonnet-parser    = { version = "=0.5.0-pre95" }
jrsonnet-evaluator = { version = "=0.5.0-pre95" }
jrsonnet-stdlib    = { version = "=0.5.0-pre95" }
jrsonnet-macros    = { version = "=0.5.0-pre95" }
jrsonnet-types     = { version = "=0.5.0-pre95" }

rust-embed = { version = "8.5.0", optional = true }
anyhow     = { version = "1.0", optional = true }
serde      = { version = "1.0.228", optional = true }
serde_json = { version = "1.0.149", optional = true, features = ["raw_value"] }